# grpc-python

./: .gitignore  Dockerfile  Makefile  README.md  config.ini  docker-compose.yml  main.py  pyproject.toml  setup.cfg
aio/: main.py  pb
aio/pb/: __init__.py
app/: greeter.py  user.py
domain/model/user/: user.py  user_repository.py
pb/: __init__.py
port/adopter/db/: db.py
port/adopter/db/repository/: user_repository.py
port/adopter/persistence/: __init__.py  db.py
port/adopter/persistence/repository/: __init__.py
script/mysql/: init.sh
src/: config.ini  main.py
src/aio/app/: greeter.py
src/app/: greeter.py  user.py
src/domain/model/: __init__.py
src/domain/model/user/: __init__.py  user.py
src/pb/: __init__.py  user_pb2.py  user_pb2_grpc.py
src/pb/protos/: user.proto
src/port/: __init__.py
src/port/adaptor/: __init__.py
src/port/adaptor/persistence/: db.py  mysql.py
src/port/adaptor/persistence/repository/: user_repository.py
src/port/adopter/: __init__.py
src/port/adopter/persistence/repository/: user_repository.py
